Working on search filter. -Carlos

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<base href='/' />
 	<title>Sample MEAN Stack App</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<script type="text/javascript" src='javascript/bundle.js'></script>
 	<script type="text/javascript" src='jquery/dist/jquery.min.js'></script>
 	<script type="text/javascript" src='bootstrap/dist/js/bootstrap.min.js'></script>
 </head>
 <body ng-app='MeanStack'>
-	<h1>Technical Test</h1>
-	<button class='btn btn-primary' ui-sref='main'>Test #1</button>
+	<h1 class='text-center background-orange'>Technical Test</h1>
+	<button class='btn btn-primary' ui-sref='main'>Test #1</button><br>
 	<div ui-view></div>
 </body>
 </html>
