Added filters, search, custom directives, and styling. -Carlos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body ng-app='MeanStack'>
 	<h1 class='text-center background-orange'>Technical Test</h1>
-	<button class='btn btn-primary' ui-sref='main'>Test #1</button><br>
+	<div ui-sref='main'></div>
 	<div ui-view></div>
 </body>
 </html>
